--- a/css/style.css
+++ b/css/style.css
@@ -428,7 +428,7 @@ h6 {
   width: 100%;
   height: 100vh;
   background: url("../img/hero-resized.svg") no-repeat center center;
-  background-size: cotain;
+  background-size: contain;
 }
 
 #hero:before {
