--- a/css/style.css
+++ b/css/style.css
@@ -1524,7 +1524,7 @@ button:hover .button-text {
 /*--------------------------------------------------------------
 # Footer
 --------------------------------------------------------------*/
-#footer {
+/* #footer {
   padding: 15px;
   color: #f4f6fd;
   font-size: 14px;
@@ -1555,4 +1555,4 @@ button:hover .button-text {
     width: auto;
     padding-right: 20px 15px;
   }
-}
+}*/
