--- a/css/style.css
+++ b/css/style.css
@@ -427,7 +427,7 @@ h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("../img/hero-resized.svg") no-repeat center center;
+  background: url("../img/hero-bg.jpg") no-repeat center center;
   background-size: contain;
 }
 
