--- a/css/style.css
+++ b/css/style.css
@@ -205,8 +205,8 @@ h6 {
 }*/
 .sign-name {
   font-family: 'Annie Use Your Telescope' !important;
-  font-size: 28px !important;
-  font-weight: normal !important;
+  font-size: 30px !important;
+  font-weight: 600 !important;
 }
 
 
